# rust-console-display

./: .gitignore  Cargo.toml  Known-Features.toml  LICENSE  LICENSE-MIT  README.md  check.sh  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: cd.yaml  ci.yaml
console-display-macros/: Cargo.toml
console-display-macros/src/: lib.rs
examples/: basic_usage.rs  drawing.rs  fireworks.rs  game_of_life.rs  graphing.rs  image_render.rs  jclock.rs  snake.rs  sorting.rs  text.rs  tic_tac_toe.rs  video_player.rs
rust-console-display-macros/: Cargo.toml
rust-console-display-macros/src/: lib.rs
src/: color.rs  color_pixel.rs  display.rs  drawing.rs  error.rs  lib.rs  macros.rs  main.rs  optional_const_generics.rs  pixel.rs  public_api.rs  widget.rs
src/display/: character_display.rs  console_display.rs  display_driver.rs  pixel_display.rs
src/pixel/: character_pixel.rs  color_pixel.rs  monochrome_pixel.rs
src/widget/: single_widget.rs  two_widget.rs
