[package]
name = "display"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A tui library that focuses primarily on providing high resolution display functionality in the console."
readme = "README.md"
repository = "https://github.com/RolandNeuber/rust-console-display"
keywords = ["console", "terminal", "tui", "ui", "widget"]
categories = ["command-line-interface", "gui", "graphics"]

[dependencies]
crossterm = "0.28.1"
paste = "1.0.15"
rand = "0.8.5"
unicode-width = "0.2.0"

[dev-dependencies]
image = "0.25.5"
