[workspace]
members = ["console-display-macros"]

[package]
name = "console-display"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "A tui library that focuses primarily on providing high resolution display functionality in the console."
readme = "README.md"
repository = "https://github.com/RolandNeuber/rust-console-display"
keywords = ["console", "terminal", "tui", "ui", "widget"]
categories = ["command-line-interface", "gui", "graphics"]

[dependencies]
console-display-macros = { path = "./console-display-macros", version = "0.1.0" }
crossterm = "0.28.1"
konst = "0.4.3"
num-traits = "0.2.19"
paste = "1.0.15"
rand = "0.8.5"
thiserror = "2.0.17"
unicode-width = "0.2.0"

[dev-dependencies]
image = "0.25.5"

[lints.clippy]
unwrap_used = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cast-precision-loss = "allow"
