[workspace]
members = ["console-display-macros"]

[package]
name = "console-display"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "A tui library that focuses primarily on providing high resolution display functionality in the console."
readme = "README.md"
repository = "https://github.com/RolandNeuber/rust-console-display"
keywords = ["console", "terminal", "tui", "ui", "widget"]
categories = ["command-line-interface", "gui", "graphics"]

[dependencies]
console-display-macros = { path = "./console-display-macros", version = "0.1.0" }
crossterm = { version = "0.29.0", features = ["events"], default-features = false }
konst = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
paste = "1.0.15"
rand = { version = "0.9.2", features = ["thread_rng"], default-features = false }
thiserror = { version = "2.0.17", default-features = false }
unicode-width = { version = "0.2.2", default-features = false }

[dev-dependencies]
image = { version = "0.25.9", default-features = false }
public-api = "0.50.1"
rustdoc-json = "0.9.7"
rustup-toolchain = "0.1.10"
serde = { version = "1.0.228", default-features = false }
toml = { version = "0.9.8", features = ["parse", "serde"], default-features = false }

[lints.clippy]
unwrap_used = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cast-precision-loss = "allow"
