[package]
name = "console-display-macros"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Macros for the console-display crate."
readme = "../README.md"
repository = "https://github.com/RolandNeuber/rust-console-display"
keywords = ["console-display", "macro"]
categories = ["command-line-interface", "gui", "graphics"]

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.42", default-features = false }
syn = { version = "2.0.111", default-features = false, features = ["visit-mut"] }
